# dromozoa-unix

./: .gitignore  Makefile  Makefile.am  README.md  build_errno.lua  common.cpp  configure.ac  dromozoa-unix-1.1-1.rockspec  dromozoa-unix-1.11-1.rockspec  dromozoa-unix-1.21-1.rockspec  dromozoa-unix-1.27-1.rockspec  dromozoa-unix-1.37-1.rockspec  dromozoa-unix-1.46-1.rockspec  dromozoa-unix-1.52-1.rockspec  dromozoa-unix-1.68-1.rockspec  dromozoa-unix-1.70-1.rockspec  forkexec.cpp  forkexec.hpp  generate.lua  gettimeofday.cpp  nanosleep.cpp  pathexec.cpp  pathexec.hpp  test.sh  version.m4
dromozoa/unix/: asio.lua  timespec.lua
include/dromozoa/: accept.hpp  argument_vector.hpp  async_service.hpp  async_task.hpp  coe.hpp  compat_accept4.hpp  compat_clock_gettime.hpp  compat_mkostemp.hpp  compat_pipe2.hpp  compat_sigmask.hpp  compat_socket.hpp  compat_strerror.hpp  condition_variable.hpp  errno_saver.hpp  file_descriptor.hpp  forkexec.hpp  hardware_concurrency.hpp  lock.hpp  mutex.hpp  ndelay.hpp  pathexec.hpp  pipe.hpp  scoped_lock.hpp  scoped_ptr.hpp  selector.hpp  selector_epoll.hpp  selector_kqueue.hpp  selfpipe.hpp  sigmask.hpp  signal_mask.hpp  socket_address.hpp  system_error.hpp  thread.hpp  timer.hpp  timer_clock_gettime.hpp  timer_mach.hpp  timer_mach_absolute_time.hpp  unexpected.hpp
m4/: update
src/: Makefile.am  addrinfo.cpp  addrinfo.hpp  argument_vector.cpp  argument_vector.hpp  coe.cpp  coe.hpp  common.cpp  common.hpp  environ.cpp  environ.hpp  error.cpp  error.hpp  fcntl.cpp  fcntl.hpp  fd.cpp  fd.hpp  forkexec.cpp  forkexec.hpp  function.hpp  getnameinfo.cpp  getnameinfo.hpp  gettimeofday.cpp  gettimeofday.hpp  lock.cpp  lock.hpp  log_level.cpp  log_level.hpp  module.cpp  nameinfo.cpp  nameinfo.hpp  nanosleep.cpp  nanosleep.hpp  ndelay.cpp  ndelay.hpp  netdb.cpp  netdb.hpp  netinet.hpp  pathexec.cpp  pathexec.hpp  (+50 more)
src/lib/: Makefile.am  accept.cpp  argument_vector.cpp  async_service.cpp  async_task.cpp  coe.cpp  compat_accept4.cpp  compat_clock_gettime.cpp  compat_mkostemp.cpp  compat_pipe2.cpp  compat_sigmask.cpp  compat_socket.cpp  compat_strerror.cpp  condition_variable.cpp  errno_saver.cpp  file_descriptor.cpp  forkexec.cpp  hardware_concurrency.cpp  lock.cpp  mutex.cpp  ndelay.cpp  pathexec.cpp  pipe.cpp  selector.cpp  selector_epoll.cpp  selector_kqueue.cpp  selfpipe.cpp  sigmask.cpp  signal_mask.cpp  socket_address.cpp  strerror.cpp  system_error.cpp  thread.cpp  timer.cpp  timer_clock_gettime.cpp  timer_mach_absolute_time.cpp  unexpected.cpp
src/lua/: Makefile.am  argument_vector.cpp  argument_vector.hpp  async_service.cpp  async_task.cpp  bind.hpp  coe.cpp  coe.hpp  common.hpp  dirent.cpp  errno.cpp  error.cpp  error.hpp  fcntl.cpp  fd.cpp  fd.hpp  fd_djb.cpp  fd_socket.cpp  fd_termios.cpp  fd_unistd.cpp  int.cpp  lock.cpp  lock.hpp  module.cpp  module.hpp  ndelay.cpp  ndelay.hpp  netdb.cpp  netdb.hpp  netinet.cpp  pathexec.cpp  pathexec.hpp  pipe.cpp  pipe.hpp  process.cpp  pwd.cpp  read.cpp  sched.cpp  selector.cpp  selector.hpp  (+25 more)
test/: asio_client.lua  asio_reader.lua  asio_server.lua  asio_writer.lua  client.lua  lock.lua  pathexec.lua  selector.lua  server.lua  test.lua  test_addrinfo.lua  test_asio.lua  test_asio2.lua  test_asio3.lua  test_asio4.lua  test_fcntl.lua  test_fd.lua  test_forkexec.lua  test_forkexec2.lua  test_gettimeofday.lua  test_io.lua  test_lock.lua  test_nanosleep.lua  test_open.lua  test_pathexec.lua  test_selector.lua  test_selfpipe.lua  test_socketpair.lua  test_stdlib.lua  test_timespec.lua  test_unistd.lua  test_unix.lua  unix_client.lua  unix_server.lua
test/lib/: Makefile.am  assert.hpp  check.hpp  common.hpp  test_argument_vector.cpp  test_async.cpp  test_compat_clock_gettime.cpp  test_compat_mkostemp.cpp  test_compat_pipe2.cpp  test_compat_socket.cpp  test_compat_strerror.cpp  test_djb.cpp  test_errno_saver.cpp  test_file_descriptor.cpp  test_forkexec.cpp  test_hardware_concurrency.cpp  test_pathexec.cpp  test_pipe.cpp  test_selector.cpp  test_selfpipe.cpp  test_sigmask.cpp  test_socket_address.cpp  test_strerror.cpp  test_timer.cpp  test_unexpected.cpp
test/lua/: asio_client.lua  asio_server.lua  equal.lua  lock.lua  pathexec.lua  test_addrinfo.lua  test_asio.lua  test_asio2.lua  test_asio3.lua  test_asio4.lua  test_async.lua  test_async2.lua  test_dgram.lua  test_dirent.lua  test_error.lua  test_fcntl.lua  test_fd.lua  test_forkexec.lua  test_int.lua  test_io.lua  test_lock.lua  test_netdb.lua  test_open.lua  test_pathexec.lua  test_process.lua  test_process_daemon.lua  test_pwd.lua  test_sched.lua  test_selector.lua  test_selfpipe.lua  test_signal.lua  test_sockaddr.lua  test_socket.lua  test_socketpair.lua  test_stat.lua  test_statvfs.lua  test_stdlib.lua  test_sys_mman.lua  test_sys_socket.lua  test_sys_stat.lua  (+13 more)
